# iscc-web

./: .dockerignore  .editorconfig  .eslintrc.cjs  .gitignore  .hadolint.yaml  .prettierignore  .prettierrc.cjs  .tool-versions  CHANGELOG.md  Dockerfile  Dockerfile.production  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: build-image.yaml  linters.yaml  test-backend.yaml  test-image-build.yaml
develop/: format_openapi.py  format_yaml.py  lf.py
frontend/: App.vue  main.scss  main.ts  vite.config.ts
frontend/components/: HelloWorld.vue  IsccFooter.vue  IsccHeader.vue  UploadZone.vue  UploadedFile.vue
frontend/directives/: tooltip.ts
frontend/services/: api.service.ts
frontend/types/: api.d.ts  iscc-web.d.ts  iscc.d.ts  vue-icon.d.ts
iscc_web/: __init__.py  cleanup.py  main.py  media.py  options.py  vite.py
iscc_web/api/: common.py  explain.py  iscc.py  media.py  metadata.py  mixins.py  models.py  pool.py  schema.py
iscc_web/static/: dashboard.html  index.html
iscc_web/static/docs/: elements.html  index.html  openapi.yaml  rapidocs.html
iscc_web/static/redocs/: index.html
iscc_web/templates/: index.html
media/: .gitignore  061kcmrj55fi8  061kcmrj55fi8.json
media/061knt35ejv6o/: 061knt35ejv6o.iscc.json  061knt35ejv6o.meta.json
tests/: conftest.py  test_api.py  test_api_explain.py  test_api_iscc.py  test_api_media.py  test_api_metadata.py  test_api_schemathesis.py  test_iscc_code.py  test_iscc_web.py  test_main.py
